--- a/_posts/2023-06-23-Tic-Tac-Toe.html
+++ b/_posts/2023-06-23-Tic-Tac-Toe.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <title>Title</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/core-js/3.13.1/minified.js" type="text/javascript"></script>
-  <script src="./cljs/goog/base.js" type="text/javascript"></script>
-  <script src="./cljs/dev.js" type="text/javascript"></script>
+  <script src="../cljs/goog/base.js" type="text/javascript"></script>
+  <script src="../cljs/dev.js" type="text/javascript"></script>
   <style>
     * {
       font-family: monospace;
@@ -29,6 +29,6 @@
 </head>
 <body>
   <div id="app"></div>
-  <script src="./cljs/app.js" type="text/javascript"></script>
+  <script src="../cljs/app.js" type="text/javascript"></script>
 </body>
 </html>
